syntax = "proto3";

// Role message

message RoleInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  uint32 status = 4;
  string name = 5;
  string code = 6;
  string default_router = 7;
  string remark = 8;
  uint32 sort = 9;
}

message RoleListResp {
  uint64 total = 1;
  repeated RoleInfo data = 2;
}

message RoleListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string name = 3;
  string code = 4;
  string default_router = 5;
}


service Core {

  // Role management
  // group: role
  rpc createRole (RoleInfo) returns (BaseIDResp);
  // group: role
  rpc updateRole (RoleInfo) returns (BaseResp);
  // group: role
  rpc getRoleList (RoleListReq) returns (RoleListResp);
  // group: role
  rpc getRoleById (IDReq) returns (RoleInfo);
  // group: role
  rpc deleteRole (IDsReq) returns (BaseResp);


}